# ScoreQuery

./: .gitignore  README.md  pyproject.toml
OcrTest/: test_paddleocr.py
ScoreQuery/: __init__.py  version.py
ScoreQuery/ScoreQuery/: __init__.py  config.py
