[project]
name = "ScoreQuery"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "alone", email = "123@qq.com"},
]
dependencies = [
    "paddlepaddle>=3.2.0",
    "paddleocr>=3.2.0",
]
[tool.poetry.dependencies]
paddlepaddle = ">=3.2.0"
paddleocr = ">=3.2.0"

requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
